# agilab

./: .gitignore  Career_of_Virat_Kohli.md  PR_DESCRIPTION.md  README.md  Rohit_Sharma.md  Virat_Kohli.md  app.py  autobuild.sh  bashrc.txt  bugs.txt  conv.json  do_exp_with_llm.py  error.txt  generate_names.py  grpo_trainer.md  infer.py  pyproject.toml  run_edit_tool.py  scrapling_tiger.md  secure_agent.py  simple_print.py  simple_tool_demo.py  ssa.py  subtract.py  sum.py  test.py  test_agent_async.py  test_agent_sync.py  test_edit.py  test_edit_with_diff.py  test_google_genai.py  test_google_tool_debug.py  test_new_edit_flow.py  test_ollama_async.py  test_ollama_sync.py  test_tools_basic.py  test_transformers_llm.py  test_vllm_async.py  test_vllm_sync.py
SimpleMem/: README.md  requirements.txt
claude/: .gitignore  ClaudeCodeSytemPrompt.md  README_LLM.md  app.py  chat.py  input.py  input_efficient.py  llm.py  logger.py  prompt.py  sample_toolcall.py  test_oai_simple.py
examples/: agent_run.py  html2mdexperiment.py  infer.py  infer_openai_comp.py  langchain_test.py  llama_index_llm.py  llamacpp_run.py  llm_infer.py  sample.py  test_agent.py  universal_log.py
flowgen/: README.md  __init__.py  agent.py  backup_rl_env.py  gemini.py  hf_dataset_viewer.py  infer.py  llm.py  rl.py
helpers/: hf_dataset_viewer.py
llm/: __vllm.py
misc/: CLAUDE.md  a.txt  bashrc.txt  commands.txt  download_sklearn_docs.py  fetch_hf_models.py  git_token.txt  gnome-theme-settings.txt  gradio_ui.py  hf_download.txt  karpathy_system_prompt.md  karpathy_ultimate_prompt.md  kimisetup.txt  (+5 more)
(+633 files in other folders)
