[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ceasercode"
version = "0.0.32"
description = "An AI-powered code agent for workspace operations"
authors = [ "Kammari Santhosh",]
readme = "README.md"
license = "MIT License"
repository = "https://github.com/santhosh/"
[[tool.poetry.packages]]
include = "claude"

[tool.poetry.scripts]
ceaser = "claude.core.input:main"

[tool.poetry.dependencies]
python = "^3.11"
